--- a/tmce/DESCRIPTION
+++ b/tmce/DESCRIPTION
@@ -11,4 +11,8 @@ Encoding: UTF-8
 LazyData: true
 Imports: 
     checkmate,
-    glue
+    glue, 
+    lightgbm, 
+    origami, 
+    R6, 
+    glmnet
