--- a/tmce/DESCRIPTION
+++ b/tmce/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: tmce
 Type: Package
 Title: What the Package Does (Title Case)
-Version: 0.1.0
+Version: 0.1.0.5000
 Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
@@ -15,4 +15,5 @@ Imports:
     lightgbm, 
     origami, 
     R6, 
-    glmnet
+    glmnet, 
+    SuperLearner
