Reworking sampling of M for density ratios

--- a/HDmediation/DESCRIPTION
+++ b/HDmediation/DESCRIPTION
@@ -29,4 +29,5 @@ Imports:
     origami
 RoxygenNote: 7.2.1
 Depends: 
-    mlr3superlearner (>= 0.1.0)
+    mlr3superlearner (>= 0.1.0), 
+    doFuture
