--- a/HDmediation/DESCRIPTION
+++ b/HDmediation/DESCRIPTION
@@ -25,7 +25,8 @@ Encoding: UTF-8
 LazyData: true
 Imports: 
     checkmate,
-    glue, 
-    origami, 
+    foreach,
+    glue,
+    origami,
     SuperLearner
 RoxygenNote: 7.2.1
