--- a/HDmediation/DESCRIPTION
+++ b/HDmediation/DESCRIPTION
@@ -25,8 +25,10 @@ Encoding: UTF-8
 LazyData: true
 Imports: 
     checkmate,
-    foreach,
     glue,
     origami,
     SuperLearner
 RoxygenNote: 7.2.1
+Depends: 
+    doFuture,
+    foreach
