--- a/HDmediation/DESCRIPTION
+++ b/HDmediation/DESCRIPTION
@@ -26,7 +26,8 @@ LazyData: true
 Imports: 
     checkmate,
     glue,
-    origami
+    origami,
+    schoolmath
 RoxygenNote: 7.2.3
 Depends: 
     mlr3superlearner (>= 0.1.0), 
